# gimage

./: CMakeLists.txt  README.md  gimageConfig.cmake.in
cuda/: cudaProc.cu
ext/gtest/: CMakeLists.txt
include/: array.h  gimage.h  gimage_export.h  logger.h  timer.h
src/: array.cpp
test/: Thumbs.db  allTests.cpp  geo_cal_image.tif  test.tif
